# -pictogram-classifier

./: .gitignore  CMakeLists.txt  README.md
include/: extract_images.hpp  find_pictograms.hpp  number_page.hpp  rotate.hpp  size_picture.hpp  tools.hpp
src/: extract_images.cpp  find_pictograms.cpp  main.cpp  number_page.cpp  rotate.cpp  size_picture.cpp  tools.cpp
